@@ -1,0 +1,31 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<hibernate-mapping xmlns="urn:nhibernate-mapping-2.2"
+           namespace="NHibernate.Test.NHSpecificTest.NH2489"
+           assembly="NHibernate.Test"
+>
+  <class name="Base" >
+    <id name="Id">
+      <generator class="increment"/>
+    </id>
+    <list name="Children" lazy="extra" cascade="all">
+      <key column="listparentid"/>
+      <!-- sqlite doesn't like a column named index -->
+      <index column="childindex"/>
+      <many-to-many class="Child"/>
+    </list>
+    <map name="NamedChildren" lazy="extra" cascade="all" >
+      <key column="mapparentid" />
+      <index column="name" type="string" />
+      <many-to-many class="Child">
+        <column name="Child" not-null="false" />
+      </many-to-many>
+    </map>
+  </class>
+
+  <class name="Child">
+    <id name="Id">
+      <generator class="increment"/>
+    </id>
+  </class>
+  
+</hibernate-mapping>
